--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lkky Games</title>
+    <title>GameRanker</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -31,12 +31,12 @@
       </div>      
       <div class="inner cover">
         <h1 class="cover-heading">The adventure Begins</h1>
-        <div class="lead cover-copy">Hold tight as we get our working robots together to produce the most astonishing crypto game sharing platform ever backed by <a class="backer-link" href="https://projectseed.io/"> Project Seed</a> .</div>
+        <div class="lead cover-copy">Hold tight as we get our working robots together to produce the most astonishing crypto game sharing platform.</div>
         <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Notify Me</button></p>
       </div>
       <div class="mastfoot">
         <div class="inner">
-          <p>&copy; lkkyinc Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a>.</p>
+          <p>&copy; GameRanker Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a>.</p>
         </div>
       </div>
       <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
