media query for mobile and pc screens

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </nav>
-        <img class="tempo first_section" src="assets/img/scrn_0_min.png" alt="..." />
+        <img class="tempo first_section" src="assets/img/scrn_0_min_resized.png" alt="..." />
         <img class="tempo" src="assets/img/scrn_1_min.png" alt="..." />
         <img class="tempo" src="assets/img/scrn_2_min.png" alt="..." />
         <img class="tempo" src="assets/img/scrn_3_min.png" alt="..." />
