--- a/index.html
+++ b/index.html
@@ -18,33 +18,32 @@
         <link href="css/custom.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand" href="#page-top">RankerDAO</a>
-                <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://t.me/rankerdao">Telegram</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://twitter.com/RankerDAO">Twitter</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="">Coming Soon</a></li>
-                    </ul>
+        <div id="root-container">
+            <!-- Navigation-->
+            <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+                <div class="container">
+                    <a class="navbar-brand" href="#page-top">RankerDAO</a>
+                    <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarResponsive">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://t.me/rankerdao">Telegram</a></li>
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://twitter.com/RankerDAO">Twitter</a></li>
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="">Coming Soon</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
-        <img class="tempo first_section" src="assets/img/scrn_0_min.png" alt="..." />
-        <img class="tempo" src="assets/img/scrn_1_min.png" alt="..." />
-        <img class="tempo" src="assets/img/scrn_2_min.png" alt="..." />
-        <img class="tempo" src="assets/img/scrn_3_min.png" alt="..." />
-        <img class="tempo" src="assets/img/scrn_4_min.png" alt="..." />
-        <img class="tempo" src="assets/img/scrn_5_min.png" alt="..." />
+            </nav>
 
+            <img class="tempo first_section" src="assets/img/scrn_0_min.png" alt="..." />
+            <img class="tempo" src="assets/img/scrn_1_min.png" alt="..." />
+            <img class="tempo" src="assets/img/scrn_2_min.png" alt="..." />
+            <img class="tempo" src="assets/img/scrn_3_min.png" alt="..." />
+            <img class="tempo" src="assets/img/scrn_4_min.png" alt="..." />
+            <img class="tempo" src="assets/img/scrn_5_min.png" alt="..." />
 
-
-
-
+        </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
