--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                 </div>
             </nav>
 
-            <img class="tempo first_section" src="assets/img/scrn_0_min.png" alt="..." />
-            <img class="tempo" src="assets/img/scrn_1_min.png" alt="..." />
-            <img class="tempo" src="assets/img/scrn_2_min.png" alt="..." />
-            <img class="tempo" src="assets/img/scrn_3_min.png" alt="..." />
-            <img class="tempo" src="assets/img/scrn_4_min.png" alt="..." />
-            <img class="tempo" src="assets/img/scrn_5_min.png" alt="..." />
+            <img class="tempo first_section" src="assets/img/scrn_0_min_high.jpeg" alt="..." />
+            <img class="tempo" src="assets/img/scrn_1_min_high.jpeg" alt="..." />
+            <img class="tempo" src="assets/img/scrn_2_min_high.jpeg" alt="..." />
+            <img class="tempo" src="assets/img/scrn_3_min_high.jpeg" alt="..." />
+            <img class="tempo" src="assets/img/scrn_4_min_high.jpeg" alt="..." />
+            <img class="tempo" src="assets/img/scrn_5_min_high.jpeg" alt="..." />
 
         </div>
         <!-- Bootstrap core JS-->
