--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img class="tempo" src="assets/img/scrn_1_min_high.jpeg" alt="..." />
             <img class="tempo" src="assets/img/scrn_2_min_high.jpeg" alt="..." />
             <img class="tempo" src="assets/img/scrn_3_min_high.jpeg" alt="..." />
-            <img class="tempo" src="assets/img/scrn_4_min_high.jpeg" alt="..." />
+            <img class="tempo" src="assets/img/scrn_4_min_high.png" alt="..." />
             <img class="tempo" src="assets/img/scrn_5_min_high.jpeg" alt="..." />
 
         </div>
