--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img class="tempo" src="assets/img/scrn_2_min_high.png" alt="..." />
             <img class="tempo" src="assets/img/scrn_3_min_high.jpeg" alt="..." />
             <img class="tempo" src="assets/img/scrn_4_min_high.jpeg" alt="..." />
-            <img class="tempo" src="assets/img/scrn_5_min_high.png" alt="..." />
+            <img class="tempo" src="assets/img/scrn_5_min_high.jpeg" alt="..." />
 
         </div>
         <!-- Bootstrap core JS-->
