add discord link

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://t.me/rankerdao">Telegram</a></li>
                             <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://twitter.com/RankerDAO">Twitter</a></li>
+                            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://discord.com/invite/5AECmGFf">Discord</a></li>
                             <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="">Coming Soon</a></li>
                         </ul>
                     </div>
