--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <img class="tempo" src="assets/img/scrn_3_min_high.jpeg" alt="..." />
             <img class="tempo" src="assets/img/scrn_4_min_high.jpeg" alt="..." />
             <img class="tempo" src="assets/img/scrn_5_min_high.jpeg" alt="..." />
+            <img class="tempo" src="assets/img/scrn_6_min_high.jpeg" alt="..." />
 
         </div>
         <!-- Bootstrap core JS-->
